# NeuronExtensionSettings

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  discovery.cpp  discovery.h  main.cpp  neuroextensionsettings.pro  test.cpp  test.h  writesettings.cpp  writesettings.h
.github/workflows/: release.yml
include/: debug.h  modbus_client.h  neuron_bus.h
src/: main.cpp  modbus_client.cpp  neuron_bus.cpp
